bugfix: missing padding in the small blade under the title

--- a/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
+++ b/src/modules/account/components/MaterialRequestDetailBlade/MaterialRequestDetailBlade.module.scss
@@ -11,8 +11,12 @@
 	}
 
 	@media (min-width: abstracts.$breakpoint-md) {
-		:global(.c-blade__title){
-			padding-bottom: 0;
+		:has(&__tabs ) {
+			:global(#material-request-detail-blade){
+				:global(.c-blade__title){
+					padding-bottom: 0;
+				}
+			}
 		}
 
 		&__tabs {
@@ -98,7 +102,7 @@
 		}
 	}
 
-	&__title{
+	&__title {
 		> :last-child {
 			margin-top: abstracts.$spacer-xs;
 		}
